--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,73 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
 }
 
+/* === Style for the navigation bar === */
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: #55d6aa;
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  padding: 10px;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+nav li {
+  display: inline-block;
+  margin-left: 70px;
+  padding-top: 10px;
+  position: relative;
+}
+
+nav a {
+  color: #444444;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+nav a:hover {
+  color: #000000;
+}
+
+nav a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  border-radius: 5px;
+  background-color: #444444;
+  position: absolute;
+  top: 0;
+  width: 0;
+  transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before {
+  width: 100%;
+}
+/* === Style for the webpage content === */
 .profile-card {
   width: 420px;
   overflow: hidden;
